--- a/mystyle.css
+++ b/mystyle.css
@@ -35,7 +35,7 @@ h2 {
 	font-family: 'Work Sans', sans-serif;
 	font-size: 1.1em;
 	font-weight: 800;
-
+	padding: 1rem 1.7rem;
 	transition: all .2s ease-in-out;
     transition-property: all;
     transition-duration: 0.2s;
@@ -94,6 +94,14 @@ h2 {
   h4 {
   	font-size:100%;
   }
+
+  .nava {
+	font-size:12px !important;
+
+  }
+
+
+}
 
 }
 
