--- a/mystyle.css
+++ b/mystyle.css
@@ -112,13 +112,13 @@ h2 {
 }
 
 .btn-primary {
-  background-color: #de3636;
+  background-color: #de3636!important;
   border-color: #fff; }
 
 .btn-primary:hover {
   color: #333;
   text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #fff;
+  background-color: #fff!important;
   border: 1px solid #fff !important;
   border-width: 5px !important;
   cursor: pointer !important;
@@ -135,7 +135,7 @@ footer  {
 	position:absolute;
 	bottom: 10px;
 	width:100%; 
-	font-size: 75%;
+	font-size: 60%;
 }
 
 @media (max-height: 600px) {
