--- a/mystyle2.css
+++ b/mystyle2.css
@@ -115,7 +115,7 @@ h2 {
   .masthead-nav > li > a {
       font-size:11px !important;
   }
-
+}
 
   /*.cover-heading {
     position:relative;
@@ -145,14 +145,14 @@ h2 {
 }
 
 .btn-primary {
-  color:#1d202a;
+  color:#1d202a!important;
   background-color: #fff;
   border-color: #fff; }
 
 .btn-primary:hover {
   color: #333;
   text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #e66436;
+  background-color: #e66436!important;
   border: 1px solid #e66436 !important;
   border-width: 5px !important;
   cursor: pointer !important;
